--- a/views/add.html
+++ b/views/add.html
@@ -46,10 +46,21 @@
 	<span class="notice" id="download-notice">{"Please enter a download."}</span>
 </p>
 
+<!--
 <p>
 	{"Quantity"}:<br />
 	<input type="text" name="quantity" value="{{ quantity|quotes }}" size="10" />
 	<span class="notice" id="quantity-notice">{"Please enter a quantity."}</span>
+</p>
+-->
+<input type="hidden" name="quantity" value="{{ quantity|quotes }}" />
+
+<p>
+	{"Requires mailing address"}:<br />
+	<select name="address">
+		<option value="0"{% if address == 0 %} selected{% end %}>{"No"}</option>
+		<option value="1"{% if address == 1 %} selected{% end %}>{"Yes"}</option>
+	</select>
 </p>
 
 <p>
