--- a/css/products.css
+++ b/css/products.css
@@ -95,3 +95,48 @@
 	color: #a00;
 	font-weight: bold;
 }
+
+.cart-contents-table {
+	width: 100%;
+}
+
+.cart-contents-table th {
+	font-weight: bold;
+}
+
+.cart-contents-table th,
+.cart-contents-table td {
+	padding: 5px;
+}
+
+.cart-contents-table tr:nth-child(odd) {
+	background-color: #f5f5f5;
+}
+
+.cart-col-quantity {
+	text-align: center;
+	width: 20%;
+}
+
+.cart-col-quantity input.cart-input-qty {
+	text-align: right;
+	width: 30px;
+}
+
+.cart-col-price {
+	text-align: right;
+	width: 20%;
+}
+
+.cart-subtotal {
+	text-align: right;
+}
+
+.cart-actions {
+	text-align: center;
+}
+
+.cart-actions button {
+	margin-left: 15px;
+	margin-right: 15px;
+}
