Added view cart links

--- a/views/details.html
+++ b/views/details.html
@@ -1,5 +1,7 @@
-<p>
+<p class="products-nav">
 	<a href="/products">&laquo; {"All Products"}</a>
+	&nbsp;|&nbsp;
+	<a href="/products/cart">{"View Cart"}</a>
 </p>
 
 <div class="products-summary e-row-equal">
