--- a/views/index.html
+++ b/views/index.html
@@ -1,3 +1,7 @@
+<p class="products-nav products-nav-home">
+	<a href="/products/cart">{"View Cart"}</a>
+</p>
+
 <div class="products">
 {% foreach products as product %}
 
