--- a/views/settings.html
+++ b/views/settings.html
@@ -17,6 +17,16 @@
 {% end %}
 </select></p>
 
+<p>{"Max shipping fee (optional)"}:<br />
+$ <input type="text" name="max_shipping" size="10" value="{{ max_shipping }}" placeholder="ex: 25.00" />
+	<span class="notice" id="max_shipping-notice">{"Please enter a valid max shipping amount."}</span>
+</p>
+
+<p>{"Free shipping over (optional)"}:<br />
+$ <input type="text" name="shipping_free_over" size="10" value="{{ shipping_free_over }}" placeholder="ex: 100.00" />
+	<span class="notice" id="shipping_free_over-notice">{"Please enter a valid free shipping over amount."}</span>
+</p>
+
 <p>{"Payment handler"}:<br />
 <select name="payment_handler">
 	<option value="">{"None"}</option>
