--- a/views/checkout.html
+++ b/views/checkout.html
@@ -1,18 +1,3 @@
-{% if ! User::require_login () %}
-
-<div class="e-row-variable">
-	<div class="e-col-50">
-		<h3>{"Already a member?"}</h3>
-		{! user/login?redirect=/products/checkout !}
-	</div>
-	<div class="e-col-50">
-		<h3>{"Create a new account"}</h3>
-		{! user/signup?redirect=/products/checkout !}
-	</div>
-</div>
-
-{% else %}
-
 <script id="tpl-checkout" type="text/html">
 <table class="cart-summary">
 	<tr>
@@ -21,7 +6,7 @@
 	</tr>
 	<tr>
 		<td><strong>{"Shipping"}</strong></td>
-		<td class="cart-col-price">\{{money shipping}}</td>
+		<td class="cart-col-price">\{{#if shipping}}\{{money shipping}}\{{else}}{"FREE"}\{{/if}}</td>
 	</tr>
 \{{#each taxes}}
 	<tr>
@@ -41,19 +26,40 @@
 <h3>{"Order Summary"}</h3>
 
 <div id="checkout-summary">
-	<p>{"Calculating taxes and shipping. Please wait."}</p>
+
+<table class="cart-summary">
+	<tr>
+		<td><strong>{"Subtotal"}</strong></td>
+		<td class="cart-col-price">{{subtotal|}}</td>
+	</tr>
+	<tr>
+		<td><strong>{"Shipping"}</strong></td>
+		<td class="cart-col-price">\{{#if shipping}}\{{money shipping}}\{{else}}{"FREE"}\{{/if}}</td>
+	</tr>
+\{{#each taxes}}
+	<tr>
+		<td><strong>\{{tax_name}}</strong></td>
+		<td class="cart-col-price">\{{money tax_amount}}</td>
+	</tr>
+\{{/each}}
+	<tr>
+		<td><strong>{"Total"}</strong></td>
+		<td class="cart-col-price">\{{money total}}</td>
+	</tr>
+</table>
+
 </div>
 
-<h3>{"Shipping Address"}</h3>
-
-<p>...</p>
+{% if shipping_free_over %}
+<p class="free-shipping">{"Free shipping on orders over"} ${{shipping_free_over|products\Filter::money}}</p>
+{% end %}
 
 <p>{! stripe/button
 	?description=[payment_description]
 	&amount=[total]
 	&button=Pay+Now
-	&redirect=/products/order/%d/[id]/completed
-	&address=[address]
+	&redirect=/products/order/%d/[order->id]/completed
+	&address=Yes
 !}</p>
 
 <script>
@@ -65,5 +71,3 @@ cart.init ({
 	shipping_free_over: {{shipping_free_over}}
 });
 </script>
-
-{% end %}
