Added start of orders page

--- a/views/admin.html
+++ b/views/admin.html
@@ -1,6 +1,8 @@
 <p>
 	<a href="/products/add">{"Add Product"}</a>
 	&nbsp;|&nbsp;
+	<a href="/products/orders">{"Orders"}</a>
+	&nbsp;|&nbsp;
 	<a href="/products/categories">{"Categories"}</a>
 	&nbsp;|&nbsp;
 	<a href="/products/taxes">{"Taxes"}</a>
