Cart contents updating in orders

--- a/views/checkout.html
+++ b/views/checkout.html
@@ -30,7 +30,7 @@
 <table class="cart-summary">
 	<tr>
 		<td><strong>{"Subtotal"}</strong></td>
-		<td class="cart-col-price">{{subtotal|}}</td>
+		<td class="cart-col-price">\{{money subtotal}}</td>
 	</tr>
 	<tr>
 		<td><strong>{"Shipping"}</strong></td>
