--- a/views/checkout_post.html
+++ b/views/checkout_post.html
@@ -1,4 +1,6 @@
-<div id="checkout-summary">{"Calculating taxes and shipping. Please wait."}</div>
+<div id="checkout-summary">
+	<p>{"Calculating taxes and shipping. Please wait."}</p>
+</div>
 
 <script>
 cart.init ({
